[package]
name = "office-align"
version = "0.1.0"
authors = ["David Krasnitsky <dikaveman@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2.3.1"
zip = "0.5.11"
zip-extensions = "0.6.0"
clap = "2.33.3"
# glob = "0.3.0"
